--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=recipe-book-manager
+
+# Database connection
+spring.data.mongodb.uri=mongodb://adminRecipeBook:adminRecipeBook1@localhost:27017/recipes-book
+spring.data.mongodb.database=recipes-book
