feat: create the user entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.application.name=recipe-book-manager
 # Database connection
 spring.data.mongodb.uri=mongodb://adminRecipeBook:adminRecipeBook1@localhost:27017/recipes-book
 spring.data.mongodb.database=recipes-book
+
+
+#JWT
+api.security.token.secret=${JWT_SECRET:default_secret}
