feat: create the user controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=recipe-book-manager
 
 # Database connection
-spring.data.mongodb.uri=mongodb://adminRecipeBook:adminRecipeBook1@localhost:27017/recipes-book
+spring.data.mongodb.uri=mongodb://adminRecipeBook:adminRecipeBook1@localhost:27017
 spring.data.mongodb.database=recipes-book
 
 
